--- a/mumble.html
+++ b/mumble.html
@@ -47,7 +47,7 @@
 		}
 
 		function updateWidget(response) {
-			<!-- identify the server name and update the root span if necessary -->
+			// Identify the server name and update the root span if necessary.
 			if (!(("&nbsp;" + response.name.toString() + ":") === $("#server-root-name").html())) {
 				$("#server-root-name").html("&nbsp;" + response.name.toString() + ":");
 			}
@@ -61,12 +61,12 @@
 			$.each(response.channels, function() {
 				var divChannelId = "mw-channel-" + (this.name).replace(/\W/g, '');
 			
-				<!-- check if this channel is in the div; if not, add it with unique id tied to its channel name (with stripped whitespace) -->
+				// Check if this channel is in the div; if not, add it with unique id tied to its channel name (with stripped whitespace).
 				if (!($("#" + divChannelId).length > 0)) {
 					$("#mw-main").append("<span id=\"" + divChannelId + "\" style=\"padding-left: 25px; position: relative;\"><img src=\"https://images.mumbleboxes.com/mr/icons/channel.png\" />&nbsp;<a href=\"" + this.x_connecturl + "\" style=\"vertical-align: sub;\">" + this.name + "</a><br /></span>");
 				}
 
-				<!-- loop through each user in this channel and push them into an array which will subsequently be sorted -->
+				// loop through each user in this channel and push them into an array which will subsequently be sorted.
 				var users = [];
 				$.each(this.users, function() {
 					var user = new Object();
@@ -77,14 +77,14 @@
 					users.push(user);
 				});
 
-				<!-- sort the array alphabetically (case-insensitive) -->
+				// sort the array alphabetically (case-insensitive).
 				users.sort(function(a, b) {
 					if (a.name.toLowerCase() < b.name.toLowerCase()) return -1;
 					if (a.name.toLowerCase() > b.name.toLowerCase()) return 1;
 					return 0;
 				});
 
-				<!-- loop through all users in the div to remove any that were present but are no longer in the JSON -->
+				// loop through all users in the div to remove any that were present but are no longer in the JSON.
 				$("#" + divChannelId).find("[id^=\"mw-user-\"]").each(function() {
 					var found = 0;
 					var thisId = this.getAttribute("id");
@@ -106,7 +106,7 @@
 					}
 				});
 
-				<!-- loop through each user and add it if it doesn't exist in the div with a unique id tied to name and session, else update their icon -->
+				// Loop through each user and add it if it doesn't exist in the div with a unique id tied to name and session, else update their icon.
 				for (var i = 0; i < users.length; i++)
 				{
 					var user = users[i];
@@ -123,7 +123,7 @@
 					}
 					else
 					{
-						<!-- just update their icon if talking/not talking -->
+						// Just update their icon if talking/not talking.
 						if ( $("#" + divUserImgId).length > 0) {
 							$("#" + divUserImgId).attr("src", icon);
 						}
