--- a/mumble.html
+++ b/mumble.html
@@ -77,7 +77,7 @@
 					users.push(user);
 				});
 
-				// sort the array alphabetically (case-insensitive).
+				// Sort the array alphabetically (case-insensitive).
 				users.sort(function(a, b) {
 					if (a.name.toLowerCase() < b.name.toLowerCase()) return -1;
 					if (a.name.toLowerCase() > b.name.toLowerCase()) return 1;
