change initial load to jquery function

--- a/mumble.html
+++ b/mumble.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 
     <link rel="stylesheet" type="text/css" href="css/mumble.css">
-
-    <script type="text/javascript" src="js/jquery-1.12.2.min.js"></script>
-    <script type="text/javascript" src="js/mumble.js"></script>
 </head>
-<body onload="loadMumbleData();">
+<body>
+
     <div id="mw-main" class="mumblewidget">
         <span id="server-root">
             <img src="icons/mumble.png" />
@@ -17,5 +15,8 @@
         <span id="server-root-name" class="server-root-name"></span>
         <br />
     </div>
+
+    <script type="text/javascript" src="js/jquery-1.12.2.min.js"></script>
+    <script type="text/javascript" src="js/mumble.js"></script>
 </body>
 </html>
